--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,3 +1,16 @@
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+
+
 @import "_breakpoints", "_functions", "_variables";
 //++++Icons Font++++//
 @font-face {
