--- a/public/assets/css/main.scss
+++ b/public/assets/css/main.scss
@@ -120,7 +120,7 @@ $colors: (
 }
 //++++Fonts++++//
 $prompt: Prompt, sans-serif;
-$poppins: Poppins, sans-serif;
+// $poppins: Poppins, sans-serif;
 $mont: Montserrat, sans-serif;
 $comfor: Comfortaa, cursive;
 //++++Keyframes++++//
@@ -293,6 +293,7 @@ body {
   font-family: $prompt;
   margin: 0;
   font-size: 16px;
+  font-weight: 400;
 }
 body {
   &.modal-open,
@@ -1660,7 +1661,7 @@ footer {
       p {
         color: color(font-dark);
         font-size: 15px;
-        font-weight: 300;
+        font-weight: 400;
         line-height: 26px;
       }
       ul {
@@ -1672,7 +1673,7 @@ footer {
           a {
             color: color(font-dark);
             font-size: 15px;
-            font-weight: 300;
+            font-weight: 400;
             //color: #677180;
           }
         }
@@ -2679,7 +2680,8 @@ footer {
         .plainText {
           background-color: transparent;
           border: transparent;
-          width: max-content;
+          width: 100%;
+          word-wrap: break-word;
           outline: none;
           padding: 0;
           margin: 0;
@@ -2800,6 +2802,22 @@ footer {
                   margin: 20px 0 0;
                 }
               }
+            }
+          }
+        }
+      }
+      &.isRepairing {
+        .orderStatus {
+          .pricing {
+            max-width: 40%;
+            flex-basis: 40%;
+            @include breakpoint(xlr) {
+              max-width: 50%;
+              flex-basis: 50%;
+            }
+            @include media-breakpoint-down(sm) {
+              max-width: 100%;
+              flex-basis: 100%;
             }
           }
         }
